
syntax= "proto3"

package="products"

service ProductService{
  rpc getProduct (ProductRequest) returns (ProductResponse)
}

message ProductRequest{
  int32 productId =  1;
}

message ProductResponse {
  int32 productId = 1;
  string name = 1;
  int32 price = 3;
}
